TY-2054: Fix for labels overlapping filter fields in case of dates

--- a/sugarcrm/styleguide/less/sugar/search-filter.less
+++ b/sugarcrm/styleguide/less/sugar/search-filter.less
@@ -331,15 +331,22 @@
     }
     .controls[data-filter='value'] {
       .input-prepend.input-append {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        .date-wrapper {
+          width: 70%;
+          flex-grow: 1;
+        }
+
         .add-on:first-child {
           background: none;
           color: @grayLight;
           left: 0;
-          width: calc(~"30% - 6px");
-        }
-
-        .datepicker {
-          width: 70%;
+          display: inline-block;
+          padding: 3px 3px 10px;
+          min-width: calc(~'30% - 6px');
         }
       }
       //For flex-relate field
